Обновил сваггер
